fix(checkout): fix margins and alignment on mobile

--- a/src/pages/checkout.module.scss
+++ b/src/pages/checkout.module.scss
@@ -1,5 +1,14 @@
 .section {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+
+  @media (min-width: $theme-breakpoints-mobile) {
+    align-items: flex-start;
+  }
+}
+
+.tickets {
+  @media (min-width: $theme-breakpoints-mobile) {
+    margin-left: 7rem;
+  }
 }
